typos and color change

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -6,7 +6,8 @@ html {
 
 body {
 font-family: Arial, Helvetica, sans-serif;
-background-color: gray;
+// background-color: gray;
+background-color: slategray;
 }
 
 /* The sidebar menu */
