--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -5,7 +5,7 @@ html {
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: gray;
+  background-color: slategray;
 }
 
 /* The sidebar menu */
